# openSUSE-welcome

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README-TRANSLATORS.md  README.md  cleanup.sh  enabler.cpp  enabler.h  i18n.qrc  i18n.sh  launcher.cpp  main.cpp  main.qml  meson.build  org.opensuse.opensuse_welcome.desktop  qml.qrc  sysinfo.cpp  webresources.qrc  welcome.desktop
data/: i18n.qrc  i18n.sh  meson.build  org.opensuse.opensuse_welcome.appdata.xml  org.opensuse.opensuse_welcome.desktop  xfce-apply-layout.py
data/i18n/: base.po  qml_be.po  qml_ca.po  qml_cs.po  qml_da.po  qml_de.po  qml_el.po  qml_es.po  qml_et.po  qml_fa.po  qml_fr.po  qml_he.po  qml_hi.po  qml_id.po  qml_it.po  qml_ja.po  qml_lt.po  qml_mk.po  qml_nl.po  qml_pl.po  qml_pt_BR.po  qml_pt_PT.po  qml_ro.po  qml_ru.po  qml_si.po  qml_sk.po  qml_sv.po  qml_tr.po  qml_tzm.po  qml_uk.po  qml_zh.po  qml_zh_CN.po  qml_zh_Hant.po
data/jekyll-src/: Gemfile  README  app.html  readme.md  socials.md
data/jekyll-src-deprecated/: contribute.md
data/jekyll-src-deprecated/_data/: home-navigation.yml  socials.yml
data/jekyll-src/_data/: home-navigation.yml
data/jekyll-src/_layouts/: default.html
data/jekyll-src/css/: app.css  lens-ui.css
data/jekyll-src/js/: app.js  jquery-lang.js  jquery.rss.js
data/qrc/: BrandedButton.qml  MainPage.qml  ThemedButton.qml  css.qrc  fonts.qrc  html.qrc  images.qrc  js.qrc  layouts.qrc  main.qml  qml.qrc  webresources.qrc
data/qrc/layouts/: Ancient Dwarf.tar.bz2  Cupertino.tar.bz2  Dwarf.tar.bz2  Redmond.tar.bz2  Unitatis.tar.bz2  Vanadium.tar.bz2
data/qrc/web/: contribute.html  home.html  readme.html  socials.html  xfce.html
data/qrc/web/css/: app.css  lens-ui.css
data/qrc/web/js/: app.js
desktop-file/: org.opensuse.opensuse_welcome.desktop  welcome.desktop
doc/: NOTES FOR CONTRIBUTORS.md  README-TRANSLATORS.md
i18n/: base.po  base.ts  qml_ca.po  qml_de.po  qml_de.qm  qml_de.ts  qml_en.po  qml_en.qm  qml_en.ts  qml_es.po  qml_fr.po  qml_pl.po  qml_zh_CN.po
include/: launcher.h  sysinfo.h
jekyll-src/: _config.yml  contribute.md  home.md  readme.md  socials.md
jekyll-src/_data/: home-navigation.yml  socials.yml
jekyll-src/_includes/: internal  link  main-buttons.html  social.html
jekyll-src/_layouts/: default.html  home.html  sub.html
jekyll-src/css/: app.css  lens-ui.css
jekyll-src/js/: search_methods.js
jekyll-src/js/langpack/: pl.json  sv.json
qrc/: i18n.qrc  i18n.sh  main.qml
qrc/i18n/: base.po  base.ts  qml_de.po  qml_de.ts
qrc/web/: home.html  readme.html
qrc/web/css/: chameleon.css  font-awesome.css
qrc/web/js/: chameleon.js  lens-angular.min.js
src/: enabler.cpp  launcher.cpp  main.cpp  meson.build  panellayouter.cpp  sysinfo.cpp
src/include/: enabler.h  launcher.h  panellayouter.h  sysinfo.h
upstream/: korora-welcome  korora-welcome.desktop  welcome  welcome.desktop
upstream/data/: app.html  contribute.html  features.html  home.html  index.html  involved.html  readme.html  socials.html
upstream/data/css/: app.css  bootstrap.min.css  fonts.css  welcome.css
upstream/data/js/: app.js  search_methods.js  welcome.js
upstream/data/js/langpack/: nb.json
upstream/data/partials/: contribute.html  features.html  main.html  readme.html  socials.html
upstream/src/: app.html  contribute.md  home.md
upstream/src/_data/: home-navigation.yml
upstream/src/_includes/: link  main-buttons.html
upstream/src/_layouts/: home.html  sub.html
upstream/src/css/: app.css  lens-ui.css
upstream/src/partials/: main.md  socials.md
web/: contribute.html  home.html  readme.html  socials.html
web/css/: app.css  font-awesome.css
web/js/: app.js  chameleon-no-jquery.js  jquery.min.js  search_methods.js
