welcome_sources = ['enabler.cpp', 'launcher.cpp', 'main.cpp', 'sysinfo.cpp']

welcome = executable('opensuse-welcome', 
                     welcome_sources, 
                     processed_files, 
                     include_directories : inc,
                     dependencies: qt5_dep,
                     install: true)